--- a/contact.html
+++ b/contact.html
@@ -20,15 +20,15 @@
                 Ahol a varázslat életre kel..
             </div>
         </div>
-        <img src="/images/index1_2.jpg" alt="">  
+        <img src="images/index1_2.jpg" alt="">  
 </div>
 
 <div></div>
 <div id="navbar">
-    <a href="/index.html">Főoldal</a>
-    <a href="/gallery.html">Munkáim</a>
-    <a href="#Contact">Elérhetőség</a>
-    <a href="/about.html">Rólam</a>
+    <a href="index.html">Főoldal</a>
+    <a href="gallery.html">Munkáim</a>
+    <a href="contact.html">Elérhetőség</a>
+    <a href="about.html">Rólam</a>
     </div>
 
 <div class="content">
@@ -67,7 +67,7 @@
                     <p>
                         Ha emailon keresztül szeretnél akkor a <a href="mailto:gyermelyigergo@tattoo.hu">gyermelyigergo@tattoo.hu</a> címen elérsz!
                     </p>  
-                    <p>Forrásokat pedig <a href="/sources.html">itt tekintheted meg</a>!</p>        
+                    <p>Forrásokat pedig <a href="sources.html">itt tekintheted meg</a>!</p>        
                 </div>
             </div>
         </div>
