--- a/about.html
+++ b/about.html
@@ -20,22 +20,22 @@
                 Ahol a varázslat életre kel..
             </div>
         </div>
-        <img src="/images/index1_2.jpg" alt="">  
+        <img src="images/index1_2.jpg" alt="">  
 </div>
 
 <div></div>
 <div id="navbar">
-    <a href="/index.html">Főoldal</a>
-    <a href="/gallery.html">Munkáim</a>
-    <a href="/contact.html">Elérhetőség</a>
-    <a href="/about.html">Rólam</a>
+    <a href="index.html">Főoldal</a>
+    <a href="gallery.html">Munkáim</a>
+    <a href="contact.html">Elérhetőség</a>
+    <a href="about.html">Rólam</a>
     </div>
 
 <div class="content">
     <div class="content-column">
         <div class="shade">
             <div class="imagebox">
-                <img src="/images/2.jpg" alt="Én Dáviddal" title="Én Dáviddal">
+                <img src="images/2.jpg" alt="Én Dáviddal" title="Én Dáviddal">
             </div>
             <div class="textbox">
                 <div class="greetings-text">
@@ -47,10 +47,10 @@
     Kiskoromtól kezdve imádtam rajzolni, mindenféle dolgot, amivel a szüleimnek is felhívtam a figyelmét. Sok sok rajzversenyen is részt vettem, amelyeken folyamatosan elvarázsoltam a zsűrit az kreatív világommal. Ebből adódóan, úgy gondoltam hogy ha rajzaimmal varázsolni tudok, akkor akár másokon varázsolni tudok.
     Nekiláttam a tetováló képzésnek, és pár év után itt vagyunk!  
     <br> <br>
-     Ha szeretnéd hogy téged is elvarázsoljalak, a munkáimat <a href="/gallery.html" style="text-decoration: none; color: rgb(255, 211, 160); font-weight: bold;">
+     Ha szeretnéd hogy téged is elvarázsoljalak, a munkáimat <a href="gallery.html" style="text-decoration: none; color: rgb(255, 211, 160); font-weight: bold;">
      itt
     </a> 
-    meglesheted! Esetleg megtetszett a mesevilágom? Akkor <a href="/contact.html" style="text-decoration: none; color: rgb(255, 211, 160); font-weight: bold;">
+    meglesheted! Esetleg megtetszett a mesevilágom? Akkor <a href="contact.html" style="text-decoration: none; color: rgb(255, 211, 160); font-weight: bold;">
         itt megtalálsz
     </a>
     :) 
