--- a/gallery.html
+++ b/gallery.html
@@ -20,15 +20,15 @@
                 Ahol a varázslat életre kel..
             </div>
         </div>
-        <img src="/images/index1_2.jpg" alt="">  
+        <img src="images/index1_2.jpg" alt="">  
 </div>
 
 <div></div>
 <div id="navbar">
-    <a href="/index.html">Főoldal</a>
-    <a href="/gallery.html">Munkáim</a>
-    <a href="/contact.html">Elérhetőség</a>
-    <a href="/about.html">Rólam</a>
+    <a href="index.html">Főoldal</a>
+    <a href="gallery.html">Munkáim</a>
+    <a href="contact.html">Elérhetőség</a>
+    <a href="about.html">Rólam</a>
     </div>
 
 <div class="content">
@@ -38,20 +38,20 @@
         <div class="columnbox">
             <div class="gallery">
                 <div class="images">
-                    <a href="/images/html/03.html"><img src="/images/3.jpg" alt=""></a>
-                    <a href="/images/html/04.html"><img src="/images/4.jpg" alt=""></a>
-                    <a href="/images/html/05.html"><img src="/images/5.jpg" alt=""></a>
+                    <a href="images/html/03.html"><img src="images/3.jpg" alt=""></a>
+                    <a href="images/html/04.html"><img src="images/4.jpg" alt=""></a>
+                    <a href="images/html/05.html"><img src="images/5.jpg" alt=""></a>
                 </div>
                 <div class="images">
-                    <a href="/images/html/09.html"><img src="/images/9.jpg" alt=""></a>
-                    <a href="/images/html/10.html"><img src="/images/10.jpg" alt=""></a>
-                    <a href="/images/html/11.html"><img src="/images/11.jpg" alt=""></a>  
-                    <a href="/images/html/12.html"><img src="/images/12.jpg" alt=""></a> 
+                    <a href="images/html/09.html"><img src="images/9.jpg" alt=""></a>
+                    <a href="images/html/10.html"><img src="images/10.jpg" alt=""></a>
+                    <a href="images/html/11.html"><img src="images/11.jpg" alt=""></a>  
+                    <a href="images/html/12.html"><img src="images/12.jpg" alt=""></a> 
                 </div>
                 <div class="images">
-                    <a href="/images/html/06.html"><img src="/images/6.jpg" alt=""></a>
-                    <a href="/images/html/07.html"><img src="/images/7.jpg" alt=""></a>
-                    <a href="/images/html/08.html"><img src="/images/8.jpg" alt=""></a>
+                    <a href="images/html/06.html"><img src="images/6.jpg" alt=""></a>
+                    <a href="images/html/07.html"><img src="images/7.jpg" alt=""></a>
+                    <a href="images/html/08.html"><img src="images/8.jpg" alt=""></a>
                 </div>
             </div>
         </div>
