--- a/sources.html
+++ b/sources.html
@@ -20,15 +20,15 @@
                 Ahol a varázslat életre kel..
             </div>
         </div>
-        <img src="/images/index1_2.jpg" alt="">  
+        <img src="images/index1_2.jpg" alt="">  
 </div>
 
 <div></div>
 <div id="navbar">
-    <a href="/index.html">Főoldal</a>
-    <a href="/gallery.html">Munkáim</a>
-    <a href="/contact.html">Elérhetőség</a>
-    <a href="/about.html">Rólam</a>
+    <a href="index.html">Főoldal</a>
+    <a href="gallery.html">Munkáim</a>
+    <a href="contact.html">Elérhetőség</a>
+    <a href="about.html">Rólam</a>
     </div>
 
 <div class="content">
@@ -39,7 +39,7 @@
             <div class="s-gallery">
                 <div class="s-images">
                     <div class="imagecontainer">
-                        <a href="https://unsplash.com/photos/zeT_i6av9rU"><img class="imagefront" src="/images/1.jpg" alt=""></a>
+                        <a href="https://unsplash.com/photos/zeT_i6av9rU"><img class="imagefront" src="images/1.jpg" alt=""></a>
                         <div class="fadetextbox">
                             <a href="https://unsplash.com/@lucaslenzi">
                             <div class="fadetext">
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                     <div class="imagecontainer">
-                        <a href="https://unsplash.com/photos/nMv8DMdM4Z8"><img class="imagefront" src="/images/2.jpg" alt=""></a>
+                        <a href="https://unsplash.com/photos/nMv8DMdM4Z8"><img class="imagefront" src="images/2.jpg" alt=""></a>
                         <div class="fadetextbox">
                             <a href="https://unsplash.com/@lightrisephoto">
                             <div class="fadetext">
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="imagecontainer">
-                        <a href="https://unsplash.com/photos/oax6DCsi6V4"><img class="imagefront" src="/images/3.jpg" alt=""></a>
+                        <a href="https://unsplash.com/photos/oax6DCsi6V4"><img class="imagefront" src="images/3.jpg" alt=""></a>
                         <div class="fadetextbox">
                             <a href="https://unsplash.com/@jannis_lucas">
                             <div class="fadetext">
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <div class="imagecontainer">
-                        <a href="https://unsplash.com/photos/eenumTwM6Ec"><img class="imagefront" src="/images/4.jpg" alt=""></a>
+                        <a href="https://unsplash.com/photos/eenumTwM6Ec"><img class="imagefront" src="images/4.jpg" alt=""></a>
                         <div class="fadetextbox">
                             <a href="https://unsplash.com/@jjjordan">
                             <div class="fadetext">
@@ -81,7 +81,7 @@
                 </div>
                 <div class="s-images">
                     <div class="imagecontainer">
-                        <a href="https://unsplash.com/photos/bWoig_hZxIU"><img class="imagefront" src="/images/9.jpg" alt=""></a>
+                        <a href="https://unsplash.com/photos/bWoig_hZxIU"><img class="imagefront" src="images/9.jpg" alt=""></a>
                         <div class="fadetextbox">
                             <a href="https://unsplash.com/@matheusfrade">
                             <div class="fadetext">
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="imagecontainer">
-                        <a href="https://pixabay.com/photos/people-man-male-body-sacred-2597905/"><img class="imagefront" src="/images/10.jpg" alt=""></a>
+                        <a href="https://pixabay.com/photos/people-man-male-body-sacred-2597905/"><img class="imagefront" src="images/10.jpg" alt=""></a>
                         <div class="fadetextbox">
                             <a href="https://pixabay.com/users/stocksnap">
                             <div class="fadetext">
@@ -101,7 +101,7 @@
                         </div>
                     </div>
                     <div class="imagecontainer">
-                        <a href="https://pixabay.com/photos/tattoo-hand-hands-couple-2894318/"><img class="imagefront" src="/images/11.jpg" alt=""></a>
+                        <a href="https://pixabay.com/photos/tattoo-hand-hands-couple-2894318/"><img class="imagefront" src="images/11.jpg" alt=""></a>
                         <div class="fadetextbox">
                             <a href="https://pixabay.com/users/thedigitalway">
                             <div class="fadetext">
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="imagecontainer">
-                        <a href="https://pixabay.com/photos/man-tattoo-thai-traditional-bamboo-2076352/"><img class="imagefront" src="/images/12.jpg" alt=""></a>
+                        <a href="https://pixabay.com/photos/man-tattoo-thai-traditional-bamboo-2076352/"><img class="imagefront" src="images/12.jpg" alt=""></a>
                         <div class="fadetextbox">
                             <a href="https://pixabay.com/users/igormattio">
                             <div class="fadetext">
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                     <div class="imagecontainer">
-                        <a href="https://unsplash.com/photos/hxNiXP498UI"><img class="imagefront" src="/images/13.jpg" alt=""></a>
+                        <a href="https://unsplash.com/photos/hxNiXP498UI"><img class="imagefront" src="images/13.jpg" alt=""></a>
                         <div class="fadetextbox">
                             <a href="https://unsplash.com/@seteph">
                             <div class="fadetext">
@@ -133,7 +133,7 @@
                 </div>
                 <div class="s-images">
                     <div class="imagecontainer">
-                        <a href="https://unsplash.com/photos/pIltvcnqsfU"><img class="imagefront" src="/images/5.jpg" alt=""></a>
+                        <a href="https://unsplash.com/photos/pIltvcnqsfU"><img class="imagefront" src="images/5.jpg" alt=""></a>
                         <div class="fadetextbox">
                             <a href="https://unsplash.com/@seteph">
                             <div class="fadetext">
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                     <div class="imagecontainer">
-                        <a href="https://unsplash.com/photos/M47HaQ1D__c"><img class="imagefront" src="/images/6.jpg" alt=""></a>
+                        <a href="https://unsplash.com/photos/M47HaQ1D__c"><img class="imagefront" src="images/6.jpg" alt=""></a>
                         <div class="fadetextbox">
                             <a href="https://unsplash.com/@duvaccari">
                             <div class="fadetext">
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div class="imagecontainer">
-                        <a href="https://unsplash.com/photos/xRKxgP4vG7E"><img class="imagefront" src="/images/7.jpg" alt=""></a>
+                        <a href="https://unsplash.com/photos/xRKxgP4vG7E"><img class="imagefront" src="images/7.jpg" alt=""></a>
                         <div class="fadetextbox">
                             <a href="https://unsplash.com/@silvana_carlos">
                             <div class="fadetext">
@@ -163,7 +163,7 @@
                         </div>
                     </div>  
                     <div class="imagecontainer">
-                        <a href="https://unsplash.com/photos/bLWaYQlfaZ0"><img class="imagefront" src="/images/8.jpg" alt=""></a>
+                        <a href="https://unsplash.com/photos/bLWaYQlfaZ0"><img class="imagefront" src="images/8.jpg" alt=""></a>
                         <div class="fadetextbox">
                             <a href="https://unsplash.com/@contentpixie">
                             <div class="fadetext">
