--- a/images/html/03.html
+++ b/images/html/03.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magic Tattoo</title>
@@ -20,7 +20,7 @@
                 Ahol a varázslat életre kel..
             </div>
         </div>
-        <img src="images/index1_2.jpg" alt="">  
+        <img src="/images/index1_2.jpg" alt="">  
 </div>
 
 <div></div>
@@ -35,8 +35,8 @@
     <div class="column-gallery">
             <div class="gallery-image">
                 <div class="imagebox">
-                    <a href="images/3.jpg">
-                        <img src="images/3.jpg" alt="">
+                    <a href="/images/3.jpg">
+                        <img src="/images/3.jpg" alt="">
                     </a>
                     <div class="imagetextbox" style="bottom: 4px;">
                         <div class="imagelink">Photo by 
@@ -50,7 +50,7 @@
             </div>    
         <div class="back">
             <div>
-                <a href="gallery.html">Visszalépés</a>
+                <a href="/gallery.html">Visszalépés</a>
             </div>  
         </div>         
     </div>
