--- a/images/html/03.html
+++ b/images/html/03.html
@@ -25,10 +25,10 @@
 
 <div></div>
 <div id="navbar">
-    <a href="index.html">Főoldal</a>
-    <a href="gallery.html">Munkáim</a>
-    <a href="contact.html">Elérhetőség</a>
-    <a href="about.html">Rólam</a>
+    <a href="/index.html">Főoldal</a>
+    <a href="/gallery.html">Munkáim</a>
+    <a href="/contact.html">Elérhetőség</a>
+    <a href="/about.html">Rólam</a>
     </div>
 
 <div class="content">
