--- a/images/html/05.html
+++ b/images/html/05.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/tattoosaloon/css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magic Tattoo</title>
@@ -20,23 +20,23 @@
                 Ahol a varázslat életre kel..
             </div>
         </div>
-        <img src="images/index1_2.jpg" alt="">  
+        <img src="/tattoosaloon/images/index1_2.jpg" alt="">  
 </div>
 
 <div></div>
 <div id="navbar">
-    <a href="index.html">Főoldal</a>
-    <a href="gallery.html">Munkáim</a>
-    <a href="contact.html">Elérhetőség</a>
-    <a href="about.html">Rólam</a>
+    <a href="/tattoosaloon/index.html">Főoldal</a>
+    <a href="/tattoosaloon/gallery.html">Munkáim</a>
+    <a href="/tattoosaloon/contact.html">Elérhetőség</a>
+    <a href="/tattoosaloon/about.html">Rólam</a>
     </div>
 
 <div class="content">
     <div class="column-gallery">
             <div class="gallery-image">
                 <div class="imagebox">
-                    <a href="images/5.jpg">
-                        <img src="images/5.jpg" alt="">
+                    <a href="/tattoosaloon/images/5.jpg">
+                        <img src="/tattoosaloon/images/5.jpg" alt="">
                     </a>
                     <div class="imagetextbox" style="bottom: 4px;">
                         <div class="imagelink">Photo by 
@@ -50,7 +50,7 @@
             </div>    
         <div class="back">
             <div>
-                <a href="gallery.html">Visszalépés</a>
+                <a href="/tattoosaloon/gallery.html">Visszalépés</a>
             </div>  
         </div>         
     </div>
