--- a/index.html
+++ b/index.html
@@ -35,25 +35,19 @@
     <div class="content-column">
         <div class="shade">
             <div class="imagebox">
-                <img src="images/2.jpg" alt="Én Dáviddal" title="Én Dáviddal">
+                <img src="images/1.jpg" alt="Én Dáviddal" title="Én Dáviddal">
             </div>
             <div class="textbox">
                 <div class="greetings-text">
     Szia!
                 </div>
                 <div class="about-text">
-    Gyermelyi Gergőnek hívnak. Jelenleg tetováló mesterként, illetve üzletvezetőként dolgozom a Magic tattoo szalonban.
-    <h3>De honnan jött "Magic" szó? :)</h3>
-    Kiskoromtól kezdve imádtam rajzolni, mindenféle dolgot, amivel a szüleimnek is felhívtam a figyelmét. Sok sok rajzversenyen is részt vettem, amelyeken folyamatosan elvarázsoltam a zsűrit az kreatív világommal. Ebből adódóan, úgy gondoltam hogy ha rajzaimmal varázsolni tudok, akkor akár másokon varázsolni tudok.
-    Nekiláttam a tetováló képzésnek, és pár év után itt vagyunk!  
-    <br> <br>
-     Ha szeretnéd hogy téged is elvarázsoljalak, a munkáimat <a href="gallery.html" style="text-decoration: none; color: rgb(255, 211, 160); font-weight: bold;">
-     itt
-    </a> 
-    meglesheted! Esetleg megtetszett a mesevilágom? Akkor <a href="#" style="text-decoration: none; color: rgb(255, 211, 160); font-weight: bold;">
-        itt megtalálsz
-    </a>
-    :) 
+                    Üdvözöllek a szalon weboldalán!
+                    <br>
+                    A 2005-ben nyitotta meg kapuit, és azóta is szüntelenül elégedett személyekkel gazdagodik. Szívesen vállalok nagyobb komplexitású tetoválásokat, de lehet szó minimalista, egyszerű formákról. Pirszing, fülbelyukasztás, és egyéb tetoválástól független tevékenységeket nem tudok vállalni. 
+                    <h2>Miért válaszd a Magic Tattoo Szalont?</h2>
+                    Tetoválásaim a legnagyobb pontosságú,magas minőséggel készülnek környezet-, bőrkímélő tintával. Szintén, ha nálam teszed le a voksod, akkor ajándékba adok 50% kedvezményt a következő tetoválásnál!
+                    Ha meg szeretnél bizonyosdni a munkáimról a <a style="text-decoration: none; color: rgb(255, 211, 160); font-weight: bold;" href="gallery.html">Galériában</a> megnézheted őket.
                 </div>
             </div>
         </div>
