--- a/about.html
+++ b/about.html
@@ -43,9 +43,8 @@
                 </div>
                 <div class="about-text">
     Gyermelyi Gergőnek hívnak. Jelenleg tetováló mesterként, illetve üzletvezetőként dolgozom a Magic tattoo szalonban.
-    <h3>De honnan jött "Magic" szó? :)</h3>
-    Kiskoromtól kezdve imádtam rajzolni, mindenféle dolgot, amivel a szüleimnek is felhívtam a figyelmét. Sok sok rajzversenyen is részt vettem, amelyeken folyamatosan elvarázsoltam a zsűrit az kreatív világommal. Ebből adódóan, úgy gondoltam hogy ha rajzaimmal varázsolni tudok, akkor akár másokon varázsolni tudok.
-    Nekiláttam a tetováló képzésnek, és pár év után itt vagyunk!  
+    <h3>De honnan is jött "Magic" szó? :)</h3>
+    Kiskoromtól kezdve imádtam rajzolni, mindenféle dolgot, amelyek a szüleimnek is nagyon tetszettek. Sok-sok rajzversenyen vettem részt, melyeken sok pozitív visszajelzést kaptam kreatív világommal kapcsolatosan. Ebből adódóan, úgy gondoltam, hogyha rajzaimmal a papíron tudok varázsolni, akkor akár más felületeket is széppé és különlegessé tudok tenni. Az emberi test egy ilyen kihívás volt a számomra. Ezért nekiláttam a tetováló képzésnek, amit azóta sem bántam meg, és pár év után végre megnyitottam életem első tetováló szalonját! 
     <br> <br>
      Ha szeretnéd hogy téged is elvarázsoljalak, a munkáimat <a href="gallery.html" style="text-decoration: none; color: rgb(255, 211, 160); font-weight: bold;">
      itt
