--- a/contact.html
+++ b/contact.html
@@ -39,16 +39,16 @@
                     Itt érhetsz el..
                 </div>
                 <div class="alert-text">
-                    A mostani helyzetre való tekintettel csakis előre megbeszélt időpontot tudok vállalni. A folyamata a következő lesz:
+                    A mostani helyzetre való tekintettel csakis előre megbeszélt időpontot tudok vállalni. A folyamata a következő:
                     <ol>
                         <li>Felhívsz az alábbi telefonszámon</li>
-                        <li>Megbeszéljük, hogy mit szeretnél, majd megadom a skype nevem</li>
-                        <li>Az előre megbeszélt időpontban Skypeon egyeztetünk a méretéről, helyéről, és vele kapcsolatosan mindenről</li>
+                        <li>Megbeszéljük, hogy mit szeretnél</li>
+                        <li>Az előre megbeszélt időpontban Skypeon egyeztetünk a tetoválás méretéről, helyéről, és vele kapcsolatosan mindenről</li>
                         <li>Eljössz a szalonba, amikorra megbeszéltük..</li>
                         <li>És kész!</li>
                     </ol>
-                    Természetesen ez vonatkozik a piercing-re is, mivel szeretném, hogy minimális legyen a veszély, maximális megelégedettséggel zárva :)
-                </div>
+                    Természetesen minden esetben azt szeretném, hogy minimális legyen a veszély, és maximális a megelégedettség!
+                    </div>
                 <div class="contact-text">
                     <p>Telefonon a 
                         <a href="tel:+3610-100-1000">
