--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                 <div class="about-text">
                     Üdvözöllek a szalon weboldalán!
                     <br>
-                    A 2005-ben nyitotta meg kapuit, és azóta is szüntelenül elégedett személyekkel gazdagodik. Szívesen vállalok nagyobb komplexitású tetoválásokat, de lehet szó minimalista, egyszerű formákról. Pirszing, fülbelyukasztás, és egyéb tetoválástól független tevékenységeket nem tudok vállalni. 
+                    A Magic Tattoo 2005-ben nyitotta meg kapuit, és azóta is folyamatosan elégedett személyekkel gazdagodik. Szívesen vállalok nagyobb komplexitású tetoválásokat, de lehet szó minimalista, egyszerű formákról is. Pirszing, fülbelyukasztás, és egyéb tetoválástól független tevékenységeket nem tudok vállalni. 
                     <h2>Miért válaszd a Magic Tattoo Szalont?</h2>
-                    Tetoválásaim a legnagyobb pontosságú,magas minőséggel készülnek környezet-, bőrkímélő tintával. Szintén, ha nálam teszed le a voksod, akkor ajándékba adok 50% kedvezményt a következő tetoválásnál!
-                    Ha meg szeretnél bizonyosodni a munkáimról a <a style="text-decoration: none; color: rgb(255, 211, 160); font-weight: bold;" href="gallery.html">Galériában</a> megnézheted őket.
+                    Tetoválásaim a legnagyobb pontossággal, magas minőségben készülnek környezet-,és bőrkímélő tintával. Ami még vonzó lehet, ha nálam teszed le a voksod, akkor ajándékba adok 50% kedvezményt a következő tetoválásnál!
+                    Ha érdekelnek a munkáim a <a style="text-decoration: none; color: rgb(255, 211, 160); font-weight: bold;" href="gallery.html">Galériában</a> megnézheted őket.
                 </div>
             </div>
         </div>
