--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="header">
-
+    <h1 style="color: red; size: 24px;">Ez egy iskolai feladat!</h1>
 </div>
 
 <div class="imagebox">
@@ -34,7 +34,7 @@
 <div class="content">
     <div class="content-column">
         <div class="shade">
-            <div class="imagebox">
+            <div class="imagebox" style="margin-top: 20px;">
                 <img src="images/2.jpg" alt="Én Dáviddal" title="Én Dáviddal">
             </div>
             <div class="textbox">
