--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="header">
-
+    <h1 style="color: red; size: 24px;">Ez egy iskolai feladat!</h1>
 </div>
 
 <div class="imagebox">
@@ -34,8 +34,8 @@
 <div class="content">
     <div class="content-column">
         <div class="shade">
-            <div class="imagebox">
-                <img src="images/1.jpg" alt="Én Dáviddal" title="Én Dáviddal">
+            <div class="imagebox" style="margin-top: 20px;">
+                <img src="images/1.jpg" alt="">
             </div>
             <div class="textbox">
                 <div class="greetings-text">
