--- a/images/html/07.html
+++ b/images/html/07.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="header">
-
+    <h1 style="color: red; size: 24px;">Ez egy iskolai feladat!</h1>
 </div>
 
 <div class="imagebox">
